# project_template

./: .editorconfig  AUTHORS  LICENSE  Makefile  Makefile.tmpl  NEWS  README.md  Untitled-1.sh  configure.ac  create.class.sh  install.sh  install.sh.old  install2.sh  log.txt  log2.txt  makefile  run.create.class.sh  shape.cpp  shape.hpp  skel.sh  test.cpp  test.hpp  uninstall.sh
basic/: .gitignore  Makefile.tmpl  csk.sh  makefile.tmpl  run.skel.sh  skel.sh
class_templalate/: class.cpp.tmpl
class_tmpl/: class.base.hpp.tmpl  class.hpp.tmpl  create.class.sh  make.class.snip.tmpl  make.rule.0.1.snip  make.snip2  run.create.class.sh
doc/: plan.txt
gtk/: configure.ac.tmpl  csk.sh  skel.sh
minimal/: .gitignore  configure.ac.tmpl  csk.sh  run.skel.sh  skel.sh
php/: test.cpp  test.hpp  uninstall.sh
php/src/aaa/: .gitignore  CMakeLists.txt  makefile
php/src/aaa/src/: aaa.cpp  aaa.hpp  bash_color.hpp  config.hpp  main.cpp
script/: SmartPtr.hpp  add_headers.sh  ccsk.php  ccsk.sh  class_skel.sh  color.sh  create.class.sh  csk.php  csk.sh  csk2.sh  make.class.snip.tmpl  makefile  makefile.tmp  mkm.php  mp_makefile  my_makefile  name_val_replace.sh  run.create.class.sh  skel.sh  tmpl.makefile
shared/: BSD_header.snip  GPL_header.snip  add_headers.sh  add_license.sh  class.base.cpp.tmpl  class.base.cpp.tmpl.deprecated  class.base.hpp.tmpl  class.base.hpp.tmpl.deprecated  class.cpp.tmpl  class.hpp copy.tmpl.deprecated  class.hpp.tmpl  class.hpp.tmpl.deprecated  cleandist.sh  conf.conf  create.class.sh  csk-a.sh  csk.bak.sh  csk.sh  csk_debug.sh  cskd.sh  cskmin.sh  (+16 more)
(+284 files in other folders)
